5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1679_1107.log
== TEST (2019-05-01 16:43:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:44:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
#diaf = int(input())
#diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:44:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
#diaf = int(input())
#diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	print(hoje)
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:44:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
#diaf = int(input())
#diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	print(hoje)
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:48:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)
else:
	print("A entrada", dia, "eh invalida")

	
-- EXECUTION TIME:
0.152362
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado  e o dia futuro eh domingo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:49:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = dia%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:49:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)
else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:50:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>=0 and dia<=6):
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)

else:
	print("A entrada", dia, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:10:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- EXECUTION TIME:
0.154486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1107/main.py", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:10:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:10:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:11:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- EXECUTION TIME:
0.136492
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1107/main.py", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:32:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:34:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diaf>6):
	diae = (diaf-dia)%6
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:34:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diaf>6):
	diae = (diaf-dia)%6
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:35:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diaf>6):
	diae = (diaf-dia)%6
	if(diae==0):
		futuro = "domingo"
	elif(diae==1):
		futuro = "segunda"
	elif(diae==2):
		futuro = "terca"
	elif(diae==3):
		futuro = "quarta"
	elif(diae==4):
		futuro = "quinta"
	elif(diae==5):
		futuro = "sexta"
	elif(diae==6):
		futuro = "sabado"
	print("Hoje eh", hoje," e o dia futuro eh", futuro)
else:
	print("A entrada", dia, "eh invalida")


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:34:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir sd
dia = int(input())
diaf = int(input())
diae = (diaf-dia)%6
if(dia>6 or dia<0):
	print("A entrada", dia, "eh invalida")
else:
	if(dia==0):
		hoje = "domingo"
	elif(dia==1):
		hoje = "segunda"
	elif(dia==2):
		hoje = "terca"
	elif(dia==3):
		hoje = "quarta"
	elif(dia==4):
		hoje = "quinta"
	elif(dia==5):
		hoje = "sexta"
	else:
		hoje = "sabado"

if(diae==0):
	futuro = "domingo"
elif(diae==1):
	futuro = "segunda"
elif(diae==2):
	futuro = "terca"
elif(diae==3):
	futuro = "quarta"
elif(diae==4):
	futuro = "quinta"
elif(diae==5):
	futuro = "sexta"
elif(diae==6):
	futuro = "sabado"
print("Hoje eh", hoje," e o dia futuro eh", futuro)


	
-- EXECUTION TIME:
0.148484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1107/main.py", line 39, in <module>
    print("Hoje eh", hoje," e o dia futuro eh", futuro)
NameError: name 'hoje' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
